--- a/src/ui/pages/Home/style.scss
+++ b/src/ui/pages/Home/style.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   padding: 3rem 0;
+  .infinite-scroll-component {
+    overflow: hidden !important;
+  }
   .sub-title {
     font-size: x-large;
     font-weight: 500;
