--- a/src/ui/pages/NewsExpanded/style.scss
+++ b/src/ui/pages/NewsExpanded/style.scss
@@ -12,14 +12,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .source-name {
-      font-size: large;
-      font-weight: bold;
-      @media (max-width: 400px) {
-        font-size: medium;
+    .backbtn-name {
+      display: flex;
+      align-items: center;
+
+      img {
+        width: 20px;
+        margin-right: 1rem;
+        cursor: pointer;
       }
-    }
-    .published-date {
+      .source-name {
+        font-size: large;
+        font-weight: bold;
+        @media (max-width: 400px) {
+          font-size: medium;
+        }
+      }
     }
   }
   .news-title {
